<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="40dp"
    tools:context=".PaymentDetailsActivity">
    <TextView
        android:id="@+id/tvInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_information_step_2_2"
        android:textSize="30sp"
        />
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_your_email"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <Button
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:textColor="@color/colorBlack"
            />
        <Button
            android:id="@+id/btnSubmitPayment"
            android:layout_marginLeft="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_payment"
            android:padding="5dp"
            android:textAllCaps="false"
            android:background="@color/colorOrange"
            android:textColor="@color/colorWhite"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_data_are_protected"
            android:textColor="@color/colorBlue"/>
        <TextView
            android:id="@+id/tvLoginHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/learn_more"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorBlue"/>
    </LinearLayout>


</LinearLayout>